# ai-rag_task

./: .env.example  .gitignore  README.md  pyproject.toml
config/: app_config.yaml
dataset/: eval_labels.json
prompts/: evaluate.md
results/audit/: access_audit.jsonl
results/evaluation_results/: evaluation_20260414_162322.json
src/resume_rag/: main.py
src/resume_rag/app/: answer_generator.py  rag_system.py
src/resume_rag/config/: settings.py
src/resume_rag/domain/: models.py
src/resume_rag/evaluation/: evaluator.py
src/resume_rag/ingestion/: loader.py  multimodal_pdf.py  resume_text.py
src/resume_rag/llm/: json_utils.py
src/resume_rag/prompts/: prompt_manager.py
src/resume_rag/retrieval/: bm25_index.py  embeddings.py  hybrid_retriever.py  vector_store.py
src/resume_rag/security/: access_control.py
src/resume_rag/visualization/: charts.py
